// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCustomAdapter should work correctly with skipInit = false: skipInit: false 1`] = `
"connect
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[
  {
    \\"skipInit\\": false,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  }
]
init
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[]
loadEvents
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[
  {
    \\"aggregateIds\\": [
      \\"id1\\"
    ]
  },
  null
]"
`;

exports[`createCustomAdapter should work correctly with skipInit = true: skipInit: true 1`] = `
"connect
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[
  {
    \\"skipInit\\": true,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  }
]
init
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[]
loadEvents
{
  \\"config\\": {},
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {},
  \\"testField1\\": 1,
  \\"testField2\\": 2
}
[
  {
    \\"aggregateIds\\": [
      \\"id1\\"
    ]
  },
  null
]"
`;
